Add login and signup endpoints with user password
