# src/main/java/happy/chicken/backend/data/model/UserDB.java
@@ -19,4 +19,7 @@ public class UserDB {
 
     @DynamoDBAttribute
     private String email;
+
+    @DynamoDBAttribute
+    private String password;
 }
